--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Web</title>
-    <link rel="shortcut icon" href="#" type="image/x-icon"> <!-- -->
+    <link rel="shortcut icon" href="./img/code-solid.svg" type="image/x-icon"> <!-- -->
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/f2ef17bc4f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- START NAVBAR -->
     <navbar id="nav" class="nav">
         <ul class="nav-list">
             <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
+            <li><a href="#projects">Work</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </navbar>
@@ -21,8 +22,75 @@
 
     <!-- START Welcome section -->
     <section id="welcome-section" class="welcome-section">
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi nesciunt ipsa sit ullam ipsum et, quis atque quos cumque molestias dicta assumenda officiis ex asperiores laborum molestiae magni delectus! Asperiores.</p>
+    <h1>Hey I am Taras</h1>
+    <p>Web developer</p>
     </section>
     <!-- END Welcome section -->
+
+    <!-- START PROJECTS SECTION -->
+    <section id="projects" class="projects-section">
+        <h2 class="projects-section-header"> These are some of my projects</h2>
+        <div class="projects-grid">
+            <a href="#" target="_blank" class="project">
+                <img src="./img/tribute.jpg" alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>Tribute Page<span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+            <a href="#" target="_blank" class="project">
+                <img src="./img/tribute.jpg" alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>Tribute Page<span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+            <a href="#" target="_blank" class="project">
+                <img src="./img/tribute.jpg" alt="project" class="project-img">
+                <p class="project-title">
+                    <span class="code">&lt;</span>Tribute Page<span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+            <a href="#" target="_blank" class="project">
+                <img src="./img/tribute.jpg" alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>Tribute Page<span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+            <a href="#" target="_blank" class="project">
+                <img src="./img/tribute.jpg" alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>Tribute Page<span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+            <a href="#" target="_blank" class="project">
+                <img src="./img/tribute.jpg" alt="project" class="project-img">
+                <p class="project-title">
+                    <span class="code">&lt;</span>Tribute Page<span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+        </div>
+        <a href="#" class="projects-btn">Show all<i class="fa-solid fa-greater-than"></i></a>
+    </section>
+    <!-- END PROJECTS SECTION -->
+
+    <!-- START CONTACT SECTION -->
+    <div id="contact-section" class="contact-section">
+        <h1>Let's work together...</h1>
+        <p>How do you take your coffee?</p>
+        <div class="contact-links">
+            <a href="#">Facebook</a>
+            <a href="#">GitHub</a>
+            <a href="#">Send me a maile</a>
+            <a href="#">Call me</a>
+        </div>
+    </div>
+    <!-- END CONTACT SECTION -->
+
+
+    <!-- START FOOTER -->
+
+    <!-- END FOOTER -->
+
+
+    
 </body>
 </html>
